changes after the first check

--- a/Notebook3.ipynb
+++ b/Notebook3.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "[10015 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
     }
    ],
    "source": [
-    "#information about the data\n",
+    "#Information about the data.\n",
     "df.info()"
    ]
   },
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "# droping the lesion_id column and image_id column\n",
+    "# Droping the lesion_id column and image_id column.\n",
     "df.drop('lesion_id',axis=1,inplace=True)\n",
     "df.drop('image_id',axis=1,inplace=True)\n",
     "df"
@@ -437,7 +437,7 @@
     }
    ],
    "source": [
-    "#checking for null in the dataset\n",
+    "#Checking for null in the dataset.\n",
     "df.isnull().sum()"
    ]
   },
@@ -463,7 +463,7 @@
     }
    ],
    "source": [
-    "#showing the null by pracent.\n",
+    "#Showing the null by pracent.\n",
     "(df.isnull().sum()/df.isnull().count())*100"
    ]
   },
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# i have decided to delete the null rows because if we dont know the age for sure it can not help us. \n",
+    "# I have decided to delete the null rows because if we dont know the age for sure it can not help us. \n",
     "df.dropna(inplace=True)"
    ]
   },
@@ -508,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# right now i have decided to make a dictionary for \"dx\" to understand which one of the lesions is cancerous and there\n",
+    "# Right now i have decided to make a dictionary for \"dx\" to understand which one of the lesions is cancerous and there\n",
     "#full names.\n",
     "dx_dict = {'dx':['nv','mel','bkl','bcc','akiec','vasc','df'],\n",
     "           'dx full names':['Melanocytic nevi','Melanoma','Benign keratosis','Basal cell carcinoma',\n",
@@ -624,6 +624,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nv       6705\n",
+       "mel      1113\n",
+       "bkl      1099\n",
+       "bcc       514\n",
+       "akiec     327\n",
+       "vasc      142\n",
+       "df        115\n",
+       "Name: dx, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Showing how many people have that lesion.\n",
+    "df['dx'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -651,7 +679,7 @@
     }
    ],
    "source": [
-    "# showing all the types od the lesions the \"dx\" and how many people have that lesion.\n",
+    "# Showing all the types od the lesions the \"dx\" and how many people have that lesion.\n",
     "labels = ['Melanocytic nevi','Melanoma','Benign keratosis','Basal cell carcinoma','Actinic keratoses',\n",
     "          'Vascular lesions','Dermatofibroma']\n",
     "value = [6705,1113,1099,514,327,142,115]\n",
@@ -680,7 +708,7 @@
     }
    ],
    "source": [
-    "# we want to show the frequancy about our data while we taking all the canceraus lesions.\n",
+    "# We want to show the frequancy about our data while we taking all the canceraus lesions.\n",
     "fig, axs = plt.subplots(1, 3,figsize = (10,10))\n",
     "\n",
     "g = (df.dx == 'bcc')|(df.dx == 'mel')|(df.dx == 'akiec')\n",
@@ -737,7 +765,7 @@
     }
    ],
    "source": [
-    "#here we can see the dx by pracents\n",
+    "#Here we can see the dx by pracents\n",
     "length_dx =len(df['dx'])\n",
     "\n",
     "labels = 'nv','mel','bkl','bcc','akiec','vasc','df'\n",
@@ -773,7 +801,7 @@
     }
    ],
    "source": [
-    "#here we want to check by pracents how many of the lesions are canceraus.\n",
+    "#Here we want to check by pracents how many of the lesions are canceraus.\n",
     "length_dx =len(df['dx'])\n",
     "\n",
     "labels = 'canceraus','not canceraus'\n",
@@ -796,7 +824,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we will make the same datafeame as df but he will be numerical.\n",
+    "# We will make the same datafeame as df but he will be numerical.\n",
     "df2 = df\n",
     "\n",
     "df2.replace(['male','female'],[0,1],inplace=True)\n",
@@ -980,7 +1008,7 @@
     }
    ],
    "source": [
-    "#the corralation heatmap.\n",
+    "#The corralation heatmap.\n",
     "corr = df2.corr()\n",
     "sns.heatmap(corr,vmin=-1, vmax=1, center=0,\n",
     "    cmap=sns.diverging_palette(20, 200, n=200),df\n",
@@ -1012,7 +1040,7 @@
     }
    ],
    "source": [
-    "#showing the data shape that we will predict.\n",
+    "#Showing the data shape that we will predict.\n",
     "df2.shape"
    ]
   },
@@ -1033,7 +1061,7 @@
     }
    ],
    "source": [
-    "#this is the dummy model , our goal is to achive better results than his.\n",
+    "#This is the dummy model , our goal is to achive better results than his.\n",
     "X = df2.drop('dx',axis=1)\n",
     "y= df2['dx']\n",
     "from sklearn.dummy import DummyClassifier\n",
@@ -1107,7 +1135,7 @@
     }
    ],
    "source": [
-    "# we will train and test the knn model\n",
+    "# We will train and test the knn model\n",
     "knn = KNeighborsClassifier(n_neighbors=58)\n",
     "knn.fit(X_train, y_train)\n",
     "y_pred = knn.predict(X_test)\n",
@@ -1129,7 +1157,7 @@
     }
    ],
    "source": [
-    "#showing the confusion matrix\n",
+    "#Showing the confusion matrix\n",
     "print(confusion_matrix(y_test,y_pred))"
    ]
   },
@@ -1155,7 +1183,7 @@
     }
    ],
    "source": [
-    "#showing the precision,recall,f1-score\n",
+    "#Showing the precision,recall,f1-score\n",
     "print(classification_report(y_test,y_pred))"
    ]
   },
@@ -1173,7 +1201,7 @@
     }
    ],
    "source": [
-    "# predicting with our second model,in the way of logisticregression\n",
+    "# Predicting with our second model,in the way of logisticregression\n",
     "clf =LogisticRegression().fit(X_train, y_train)\n",
     "ans = clf.predict(X_test)\n",
     "print(\"Accuracy:\",clf.score(X, y))"
@@ -1194,7 +1222,7 @@
     }
    ],
    "source": [
-    "#showing the confusion matrix\n",
+    "#Showing the confusion matrix\n",
     "print(confusion_matrix(y_test,ans))"
    ]
   },
@@ -1220,7 +1248,7 @@
     }
    ],
    "source": [
-    "#showing the precision,recall,f1-score\n",
+    "#Showing the precision,recall,f1-score\n",
     "print(classification_report(y_test,ans))"
    ]
   },
@@ -1735,7 +1763,7 @@
     }
    ],
    "source": [
-    "#checking for null variables.\n",
+    "#Checking for null variables.\n",
     "rdf.isnull().sum()"
    ]
   },
@@ -2488,7 +2516,7 @@
     }
    ],
    "source": [
-    "# we will write the date \"prettier\".\n",
+    "# We will write the date \"prettier\".\n",
     "rdf['date'] = pd.to_datetime(rdf.date)\n",
     "rdf"
    ]
@@ -2862,7 +2890,7 @@
     }
    ],
    "source": [
-    "# after we chnged the date to look \"prettier\", i have decidet to drop this column and to use only the \"year\" column.\n",
+    "# After we chnged the date to look \"prettier\", i have decidet to drop this column and to use only the \"year\" column.\n",
     "# in my opinion, for my purpose the \"year\" effection will be the same as the \"date\" effection.\n",
     "rdf['year'] = pd.DatetimeIndex(rdf['date']).year\n",
     "rdf.drop('date',axis = 1,inplace=True)\n",
@@ -2916,7 +2944,7 @@
     }
    ],
    "source": [
-    "# we will show the correlation between the fetchers,(for us the price row is the most important)\n",
+    "# We will show the correlation between the fetchers,(for us the price row is the most important)\n",
     "plt.figure(figsize=(16,16))\n",
     "plt.title(\"correlation map\",fontsize =20)\n",
     "corr2 = rdf.corr()\n",
@@ -2963,7 +2991,7 @@
     }
    ],
    "source": [
-    "# this is helping us to see the correlation between the fethers and the column 'price'.\n",
+    "# This is helping us to see the correlation between the fethers and the column 'price'.\n",
     "rdf.corr()['price'].sort_values(ascending=False)"
    ]
   },
@@ -2996,7 +3024,7 @@
     }
    ],
    "source": [
-    "#here we can see that the majority of the houses were soled between the prices of 0-1 milion dollars.\n",
+    "#Here we can see that the majority of the houses were sold between the prices of 0-1 million dollars.\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.distplot(rdf[\"price\"])"
    ]
@@ -3018,7 +3046,7 @@
     }
    ],
    "source": [
-    "#here we can see by pracents the range prices for the houses.\n",
+    "#Here we can see by pracents the range prices for the houses.\n",
     "length_price =len(rdf['price'])\n",
     "\n",
     "labels = '0-1','1-2','2-3','3+'\n",
@@ -3064,7 +3092,7 @@
     }
    ],
    "source": [
-    "# we want to learn about the most 12 influencing fetchers in our dataset.\n",
+    "# We want to learn about the most 12 influencing fetchers in our dataset.\n",
     "plt.figure(figsize=(15,15))\n",
     "plt.subplot(4,3,1)\n",
     "sns.scatterplot(x=\"sqft_living\", y=\"price\", data=rdf,color=\"g\")\n",
@@ -3217,7 +3245,7 @@
     }
    ],
    "source": [
-    "#we will use the ols function to check for the coefficient of determination(R2) with the two fetchers that has the best correlation\n",
+    "#We will use the ols function to check for the coefficient of determination(R2) with the two fetchers that has the best correlation\n",
     "# with our dependent featcher, and we aill try to get a better score in our predicrion(the score in the linear regression model\n",
     "# is also the R2.\n",
     "model = smf.ols('price ~ sqft_living + grade', data=rdf)\n",
@@ -3271,7 +3299,7 @@
     }
    ],
    "source": [
-    "#here we can see the coefficiants of all the featchrs with our dependent featcher.\n",
+    "#Here we can see the coefficiants of all the featchrs with our dependent featcher.\n",
     "reg.coef_"
    ]
   },
