changes in question number 5 notebook2

--- a/Notebook2.ipynb
+++ b/Notebook2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "[3333695 rows x 6 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -517,46 +517,162 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>character</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th>type</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1950</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1951</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1952</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1953</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1954</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1955</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1956</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1957</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1958</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1959</th>\n",
+       "      <th>actor</th>\n",
+       "      <td>678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actress</th>\n",
+       "      <td>287</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "6388"
+       "              character\n",
+       "year type              \n",
+       "1950 actor          604\n",
+       "     actress        271\n",
+       "1951 actor          633\n",
+       "     actress        272\n",
+       "1952 actor          591\n",
+       "     actress        284\n",
+       "1953 actor          634\n",
+       "     actress        290\n",
+       "1954 actor          626\n",
+       "     actress        298\n",
+       "1955 actor          606\n",
+       "     actress        264\n",
+       "1956 actor          614\n",
+       "     actress        288\n",
+       "1957 actor          708\n",
+       "     actress        284\n",
+       "1958 actor          694\n",
+       "     actress        275\n",
+       "1959 actor          678\n",
+       "     actress        287"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print('the amount of leadin roles were available to actors in each of the 1950s:')\n",
-    "cast[(cast['type']=='actor')&(cast['year']>=1950)&(cast['year']<1960)&(cast['n']==1)].shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the amount of leadin roles were available to actresses in each of the 1950s:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2813"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print('the amount of leadin roles were available to actresses in each of the 1950s:')\n",
-    "cast[(cast['type']=='actress')&(cast['year']>=1950)&(cast['year']<1960)&(cast['n']==1)].shape[0]"
+    "cast.loc[cast['year'] >= 1950].loc[cast['year'] < 1960].loc[cast['n'] == 1].groupby(by = ['year', 'type']).count()[['character']]"
    ]
   },
   {
