changing explnation about lesions

--- a/Notebook3.ipynb
+++ b/Notebook3.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "source": [
     "### Purpose explenation:\n",
-    "##### we will try to predict by very basic data if the type of lesion that you have is cancerous, because of that we will drop the \"lesion_id\" and the \"image_id\" that showing us the pictures of the lesions."
+    "##### we will try to predict by very basic data if the type of lesion that you have is cancerous, because of that we will drop the \"lesion_id\"(that tracking after the picturs) and the \"image_id\" that showing us the pictures of the lesions."
    ]
   },
   {
